8-2-network-policies/np-busybox.yml
apiVersion: v1
kind: Pod
metadata:
  name: np-busybox
  namespace: np-test
  labels:
    app: client
spec:
  containers:
    - name: busyboc
      image: radial/busyboxplus:curl
      command: ['sh', '-c', 'while true; do sleep 5; done']
