8-2-network-policies/my-networkpolicy-allow.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata: 
  name: my-networkpolicy
  namespace: np-test
spec:
  podSelector: 
    matchLabels:
      app: nginx
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from: 
      - namespaceSelector: 
          matchLabels: 
            team: np-test
      ports:
        - port: 80
          protocol: TCP
